objects/TaskTemplateAndCondition__c.object
<CustomObject>
    <description>&lt;TTC&gt; - Used to define which tasks must be created during the Opportunity life cycle, as well the task creation criteria, the assignee and target resolution time frame for each task.</description>
    <fields>
        <fullName>AccountTeamRole__c</fullName>
        <label>Account Team Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AccountTeamRole</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApplicableCountry__c</fullName>
        <label>Applicable Country</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AUD</fullName>
                    <label>Australia</label>
                </value>
                <value>
                    <fullName>NZD</fullName>
                    <label>New Zealand</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicable_States__c</fullName>
        <label>Applicable States</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACT</fullName>
                </value>
                <value>
                    <fullName>NSW</fullName>
                </value>
                <value>
                    <fullName>NT</fullName>
                </value>
                <value>
                    <fullName>NZ</fullName>
                </value>
                <value>
                    <fullName>QLD</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>TAS</fullName>
                </value>
                <value>
                    <fullName>VIC</fullName>
                </value>
                <value>
                    <fullName>WA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssignTo__c</fullName>
        <label>Assign To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RoleType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssigneesTeam__c</fullName>
        <label>Assignee&apos;s Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Property Team</fullName>
                </value>
                <value>
                    <fullName>Opportunity Team</fullName>
                </value>
                <value>
                    <fullName>Opportunity Owner</fullName>
                </value>
                <value>
                    <fullName>Case Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Storeroom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseRecordType__c</fullName>
        <label>Case Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LVI - Surrender a Lease</fullName>
                </value>
                <value>
                    <fullName>LVI - Assignment of a Lease</fullName>
                </value>
                <value>
                    <fullName>LVI - COVID19</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DependentTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependent Task</label>
        <referenceTo>TaskTemplateAndCondition__c</referenceTo>
        <relationshipLabel>Task Template And Conditions</relationshipLabel>
        <relationshipName>Task_Template_And_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <inlineHelpText>Number for days by which this task to be completed.</inlineHelpText>
        <label>Due Date</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GroupRenewalRole__c</fullName>
        <label>Group Renewal Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group Renewal Admin Team</fullName>
                    <label>Group Renewal Team</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsStageChange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Stage Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JVApproval__c</fullName>
        <label>JV Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeaseType__c</fullName>
        <label>Lease Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OpportunityType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityStage__c</fullName>
        <label>Opportunity Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OpportunityStage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectTeamRole__c</fullName>
        <label>Project Team Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RoleType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SkipWeekends__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Weekends</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SpecialtyLeaseType__c</fullName>
        <label>Specialty Lease Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Variation to Lease</fullName>
                </value>
                <value>
                    <fullName>Variation of Lease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaskDescription__c</fullName>
        <label>Task Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TaskName__c</fullName>
        <label>Task Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskType__c</fullName>
        <label>Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OpportunityTaskType</valueSetName>
        </valueSet>
    </fields>
    <label>Task Template And Condition</label>
    <listViews>
        <fullName>AUNewLeaseRetailOpportunity</fullName>
        <columns>NAME</columns>
        <columns>DependentTask__c</columns>
        <columns>Order__c</columns>
        <columns>OpportunityStage__c</columns>
        <columns>Applicable_States__c</columns>
        <columns>Object__c</columns>
        <columns>TaskName__c</columns>
        <columns>DueDate__c</columns>
        <columns>JVApproval__c</columns>
        <columns>AccountTeamRole__c</columns>
        <columns>ProjectTeamRole__c</columns>
        <columns>AssigneesTeam__c</columns>
        <columns>AssignTo__c</columns>
        <columns>LeaseType__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BusinessUnit__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </filters>
        <filters>
            <field>ApplicableCountry__c</field>
            <operation>equals</operation>
            <value>AUD</value>
        </filters>
        <filters>
            <field>SpecialtyLeaseType__c</field>
            <operation>equals</operation>
            <value>Default</value>
        </filters>
        <filters>
            <field>LeaseType__c</field>
            <operation>includes</operation>
            <value>New Lease</value>
        </filters>
        <label>AU New Lease Retail Opportunity</label>
    </listViews>
    <listViews>
        <fullName>AllTemplates</fullName>
        <columns>NAME</columns>
        <columns>OpportunityStage__c</columns>
        <columns>DependentTask__c</columns>
        <columns>TaskName__c</columns>
        <columns>Object__c</columns>
        <columns>AccountTeamRole__c</columns>
        <columns>ProjectTeamRole__c</columns>
        <columns>AssignTo__c</columns>
        <columns>IsActive__c</columns>
        <columns>DueDate__c</columns>
        <columns>LeaseType__c</columns>
        <columns>CaseRecordType__c</columns>
        <columns>BusinessUnit__c</columns>
        <columns>SpecialtyLeaseType__c</columns>
        <columns>ApplicableCountry__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Templates</label>
    </listViews>
    <listViews>
        <fullName>CaseAssignment</fullName>
        <columns>NAME</columns>
        <columns>DependentTask__c</columns>
        <columns>ApplicableCountry__c</columns>
        <columns>TaskName__c</columns>
        <columns>TaskType__c</columns>
        <columns>Object__c</columns>
        <columns>AssignTo__c</columns>
        <columns>AssigneesTeam__c</columns>
        <columns>CaseRecordType__c</columns>
        <columns>DueDate__c</columns>
        <columns>Order__c</columns>
        <columns>IsActive__c</columns>
        <columns>IsStageChange__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CaseRecordType__c</field>
            <operation>equals</operation>
            <value>LVI - Assignment of a Lease</value>
        </filters>
        <filters>
            <field>ApplicableCountry__c</field>
            <operation>equals</operation>
            <value>AUD</value>
        </filters>
        <label>Case - Assignment</label>
    </listViews>
    <listViews>
        <fullName>CaseAssignmentNZ</fullName>
        <columns>NAME</columns>
        <columns>DependentTask__c</columns>
        <columns>ApplicableCountry__c</columns>
        <columns>TaskName__c</columns>
        <columns>TaskType__c</columns>
        <columns>Object__c</columns>
        <columns>AssignTo__c</columns>
        <columns>AssigneesTeam__c</columns>
        <columns>CaseRecordType__c</columns>
        <columns>DueDate__c</columns>
        <columns>Order__c</columns>
        <columns>IsActive__c</columns>
        <columns>IsStageChange__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CaseRecordType__c</field>
            <operation>equals</operation>
            <value>LVI - Assignment of a Lease</value>
        </filters>
        <filters>
            <field>ApplicableCountry__c</field>
            <operation>equals</operation>
            <value>NZD</value>
        </filters>
        <label>Case - Assignment NZ</label>
    </listViews>
    <listViews>
        <fullName>CaseSurrender</fullName>
        <columns>NAME</columns>
        <columns>DependentTask__c</columns>
        <columns>TaskName__c</columns>
        <columns>TaskType__c</columns>
        <columns>Object__c</columns>
        <columns>AssignTo__c</columns>
        <columns>AssigneesTeam__c</columns>
        <columns>CaseRecordType__c</columns>
        <columns>DueDate__c</columns>
        <columns>Order__c</columns>
        <columns>IsActive__c</columns>
        <columns>ApplicableCountry__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CaseRecordType__c</field>
            <operation>equals</operation>
            <value>LVI - Surrender a Lease</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ApplicableCountry__c</field>
            <operation>equals</operation>
            <value>AUD</value>
        </filters>
        <label>Case - Surrender AU</label>
    </listViews>
    <listViews>
        <fullName>CommercialOpportunity</fullName>
        <columns>NAME</columns>
        <columns>DependentTask__c</columns>
        <columns>Order__c</columns>
        <columns>OpportunityStage__c</columns>
        <columns>Object__c</columns>
        <columns>TaskName__c</columns>
        <columns>AccountTeamRole__c</columns>
        <columns>ProjectTeamRole__c</columns>
        <columns>AssigneesTeam__c</columns>
        <columns>AssignTo__c</columns>
        <columns>LeaseType__c</columns>
        <columns>BusinessUnit__c</columns>
        <columns>DueDate__c</columns>
        <columns>ApplicableCountry__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BusinessUnit__c</field>
            <operation>equals</operation>
            <value>Commercial</value>
        </filters>
        <filters>
            <field>SpecialtyLeaseType__c</field>
            <operation>equals</operation>
            <value>Default</value>
        </filters>
        <filters>
            <field>ApplicableCountry__c</field>
            <operation>equals</operation>
            <value>AUD</value>
        </filters>
        <label>Commercial Opportunity</label>
    </listViews>
    <listViews>
        <fullName>GroupRenewalRetailOppty</fullName>
        <booleanFilter>1 AND 2 AND 3 AND (4 OR 5) AND 6</booleanFilter>
        <columns>NAME</columns>
        <columns>DependentTask__c</columns>
        <columns>Order__c</columns>
        <columns>OpportunityStage__c</columns>
        <columns>Object__c</columns>
        <columns>TaskType__c</columns>
        <columns>DueDate__c</columns>
        <columns>GroupRenewalRole__c</columns>
        <columns>AccountTeamRole__c</columns>
        <columns>ProjectTeamRole__c</columns>
        <columns>AssigneesTeam__c</columns>
        <columns>AssignTo__c</columns>
        <columns>LeaseType__c</columns>
        <columns>BusinessUnit__c</columns>
        <columns>ApplicableCountry__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BusinessUnit__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </filters>
        <filters>
            <field>ApplicableCountry__c</field>
            <operation>equals</operation>
            <value>AUD</value>
        </filters>
        <filters>
            <field>SpecialtyLeaseType__c</field>
            <operation>equals</operation>
            <value>Default</value>
        </filters>
        <filters>
            <field>GroupRenewalRole__c</field>
            <operation>equals</operation>
            <value>Group Renewal Admin Team</value>
        </filters>
        <filters>
            <field>AssignTo__c</field>
            <operation>equals</operation>
            <value>Retail Administrator</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Group Renewal Retail Oppty</label>
    </listViews>
    <listViews>
        <fullName>RetailOpportunity</fullName>
        <columns>NAME</columns>
        <columns>DependentTask__c</columns>
        <columns>Order__c</columns>
        <columns>OpportunityStage__c</columns>
        <columns>Object__c</columns>
        <columns>TaskType__c</columns>
        <columns>DueDate__c</columns>
        <columns>GroupRenewalRole__c</columns>
        <columns>AccountTeamRole__c</columns>
        <columns>ProjectTeamRole__c</columns>
        <columns>AssigneesTeam__c</columns>
        <columns>AssignTo__c</columns>
        <columns>LeaseType__c</columns>
        <columns>BusinessUnit__c</columns>
        <columns>Applicable_States__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BusinessUnit__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </filters>
        <filters>
            <field>ApplicableCountry__c</field>
            <operation>equals</operation>
            <value>AUD</value>
        </filters>
        <filters>
            <field>SpecialtyLeaseType__c</field>
            <operation>equals</operation>
            <value>Default</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Retail Opportunity - AU</label>
    </listViews>
    <listViews>
        <fullName>RetailOpportunityNZ</fullName>
        <columns>NAME</columns>
        <columns>DependentTask__c</columns>
        <columns>Order__c</columns>
        <columns>OpportunityStage__c</columns>
        <columns>Object__c</columns>
        <columns>TaskType__c</columns>
        <columns>DueDate__c</columns>
        <columns>GroupRenewalRole__c</columns>
        <columns>AccountTeamRole__c</columns>
        <columns>ProjectTeamRole__c</columns>
        <columns>AssigneesTeam__c</columns>
        <columns>AssignTo__c</columns>
        <columns>LeaseType__c</columns>
        <columns>BusinessUnit__c</columns>
        <columns>ApplicableCountry__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BusinessUnit__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </filters>
        <filters>
            <field>ApplicableCountry__c</field>
            <operation>equals</operation>
            <value>NZD</value>
        </filters>
        <filters>
            <field>SpecialtyLeaseType__c</field>
            <operation>equals</operation>
            <value>Default</value>
        </filters>
        <label>Retail Opportunity NZ</label>
    </listViews>
    <listViews>
        <fullName>SpecialityLeaseOfaLease</fullName>
        <columns>NAME</columns>
        <columns>DependentTask__c</columns>
        <columns>ApplicableCountry__c</columns>
        <columns>TaskName__c</columns>
        <columns>LeaseType__c</columns>
        <columns>Order__c</columns>
        <columns>OpportunityStage__c</columns>
        <columns>Object__c</columns>
        <columns>JVApproval__c</columns>
        <columns>AccountTeamRole__c</columns>
        <columns>AssigneesTeam__c</columns>
        <columns>AssignTo__c</columns>
        <columns>DueDate__c</columns>
        <columns>SpecialtyLeaseType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SpecialtyLeaseType__c</field>
            <operation>equals</operation>
            <value>Variation of Lease</value>
        </filters>
        <filters>
            <field>CaseRecordType__c</field>
            <operation>notEqual</operation>
            <value>LVI - Surrender a Lease,LVI - Assignment of a Lease</value>
        </filters>
        <filters>
            <field>BusinessUnit__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </filters>
        <filters>
            <field>ApplicableCountry__c</field>
            <operation>equals</operation>
            <value>AUD</value>
        </filters>
        <label>Speciality Lease - Of a Lease - Retail</label>
    </listViews>
    <listViews>
        <fullName>SpecialityLeaseOfaLeaseComm</fullName>
        <columns>NAME</columns>
        <columns>DependentTask__c</columns>
        <columns>ApplicableCountry__c</columns>
        <columns>TaskName__c</columns>
        <columns>Order__c</columns>
        <columns>OpportunityStage__c</columns>
        <columns>Object__c</columns>
        <columns>JVApproval__c</columns>
        <columns>AccountTeamRole__c</columns>
        <columns>AssigneesTeam__c</columns>
        <columns>AssignTo__c</columns>
        <columns>DueDate__c</columns>
        <columns>SpecialtyLeaseType__c</columns>
        <columns>BusinessUnit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SpecialtyLeaseType__c</field>
            <operation>equals</operation>
            <value>Variation of Lease</value>
        </filters>
        <filters>
            <field>CaseRecordType__c</field>
            <operation>notEqual</operation>
            <value>LVI - Surrender a Lease,LVI - Assignment of a Lease</value>
        </filters>
        <filters>
            <field>BusinessUnit__c</field>
            <operation>equals</operation>
            <value>Commercial</value>
        </filters>
        <label>Speciality Lease - Of a Lease - Comm</label>
    </listViews>
    <listViews>
        <fullName>SpecialityLeaseToaLease</fullName>
        <columns>NAME</columns>
        <columns>DependentTask__c</columns>
        <columns>TaskType__c</columns>
        <columns>ApplicableCountry__c</columns>
        <columns>Order__c</columns>
        <columns>OpportunityStage__c</columns>
        <columns>Object__c</columns>
        <columns>TaskName__c</columns>
        <columns>JVApproval__c</columns>
        <columns>AssigneesTeam__c</columns>
        <columns>AssignTo__c</columns>
        <columns>LeaseType__c</columns>
        <columns>BusinessUnit__c</columns>
        <columns>DueDate__c</columns>
        <columns>SpecialtyLeaseType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SpecialtyLeaseType__c</field>
            <operation>equals</operation>
            <value>Variation to Lease</value>
        </filters>
        <filters>
            <field>CaseRecordType__c</field>
            <operation>notEqual</operation>
            <value>LVI - Surrender a Lease,LVI - Assignment of a Lease</value>
        </filters>
        <filters>
            <field>BusinessUnit__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </filters>
        <label>Speciality Lease - To a Lease - Retail</label>
    </listViews>
    <listViews>
        <fullName>SpecialityLeaseToaLeaseComm</fullName>
        <columns>NAME</columns>
        <columns>DependentTask__c</columns>
        <columns>TaskType__c</columns>
        <columns>ApplicableCountry__c</columns>
        <columns>Order__c</columns>
        <columns>OpportunityStage__c</columns>
        <columns>Object__c</columns>
        <columns>TaskName__c</columns>
        <columns>JVApproval__c</columns>
        <columns>AssigneesTeam__c</columns>
        <columns>AssignTo__c</columns>
        <columns>LeaseType__c</columns>
        <columns>BusinessUnit__c</columns>
        <columns>DueDate__c</columns>
        <columns>SpecialtyLeaseType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SpecialtyLeaseType__c</field>
            <operation>equals</operation>
            <value>Variation to Lease</value>
        </filters>
        <filters>
            <field>CaseRecordType__c</field>
            <operation>notEqual</operation>
            <value>LVI - Surrender a Lease,LVI - Assignment of a Lease</value>
        </filters>
        <filters>
            <field>BusinessUnit__c</field>
            <operation>equals</operation>
            <value>Commercial</value>
        </filters>
        <label>Speciality Lease - To a Lease - Comm</label>
    </listViews>
    <listViews>
        <fullName>StoreRoomOpportunity</fullName>
        <columns>NAME</columns>
        <columns>DependentTask__c</columns>
        <columns>Order__c</columns>
        <columns>OpportunityStage__c</columns>
        <columns>Object__c</columns>
        <columns>TaskName__c</columns>
        <columns>TaskType__c</columns>
        <columns>JVApproval__c</columns>
        <columns>AccountTeamRole__c</columns>
        <columns>AssigneesTeam__c</columns>
        <columns>AssignTo__c</columns>
        <columns>LeaseType__c</columns>
        <columns>BusinessUnit__c</columns>
        <columns>DueDate__c</columns>
        <columns>ApplicableCountry__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BusinessUnit__c</field>
            <operation>equals</operation>
            <value>Storeroom</value>
        </filters>
        <filters>
            <field>SpecialtyLeaseType__c</field>
            <operation>equals</operation>
            <value>Default</value>
        </filters>
        <label>Store Room Opportunity</label>
    </listViews>
    <nameField>
        <displayFormat>TCN-{0000}</displayFormat>
        <label>Task Template And Condition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Template And Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>